<resources>
    <string name="app_name">Crescimento Infantil</string>
    <string name="action_settings">Configurações</string>

    <string name="menuitem_add_crianca">Adicionar uma Criança</string>
    <string name="menuitem_remove">Remover TODAS da seleção</string>
    <string name="menuitem_edit_crianca">Alterar uma Criança</string>
    <string name="menuitem_delete_crianca">Excluir uma Criança</string>
    <string name="menuitem_gerar_grafico_pesoxidade"> Gráfico do Crescimento Peso x Idade</string>
    <string name="menuitem_gerar_grafico_pesoxaltura"> Gráfico do Crescimento Peso x Altura</string>

    <string name="title_activity_main">Clientes</string>

    <string name="nome">Nome</string>
    <string name="sexo">Sexo</string>
    <string name="dtnascimento"> Data de Nascimento</string>
    <string name="dtatualizacao">Data da medição</string>
    <string name="vendas">Vendas do Cliente</string>

    <string name="lblPeso">Peso</string>
    <string name="lblAltura">Altura</string>

    <string name="lblUnidAltura">cm\'s</string>
    <string name="lblUnidPeso">kg\'s</string>

    <string name="rotuloNome">Nome:</string>
    <string name="rotuloSexo">Sexo:</string>
    <string name="rotuloDtNascimento">Data \nde nascimento:</string>
    <string name="gravar">Salvar</string>

    <string name="tituloErro">Necessário preencher o nome da criança!</string>
    <string name="mensagemErro">Você deve digitar um nome para a criança!</string>
    <string name="botaoErro">OK</string>
    <string name="botao_cancel">Cancel</string>
    <string name="botao_delete">Delete</string>

    <string name="confirmaTitulo">Você está certo?</string>
    <string name="confirmaMensagem">Essa ação irá excluir permanentemente o registro da criança!</string>
    <string name="confirmaMensagemSelecao">Essa ação irá excluir permanentement TODOS os registros da criança!</string>
    <string name="title_activity_add_nova_crianca">AddNovaCriancaActivity</string>
    <string name="title_activity_view_criancas">ViewCriancaActivity</string>
    <string name="title_activity_consulta_criancas">ConsultaCriancasActivity</string>
    <string name="title_activity_add_progresso_crianca">AddNovoProgressoActivity</string>
    <string name="btn_adicionar_progresso">Adicionar</string>
    <string name="btn_remover_progresso">  Remover</string>

    <string-array name="sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string-array name="filtros">
        <item>Todos</item>
        <item>Nome</item>
    </string-array>

</resources>
