<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aula_android.appCrescimentoInfantil.AddNovoProgressoActivity"
    tools:showIn="@layout/activity_add_progresso_crianca">

    <TextView
        android:id="@+id/textViewDtAtualizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dtatualizacao"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtDtAtualizacao"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:onClick="setDate"
        android:maxLength="10"
        android:ems="10" />

    <android.support.v7.widget.FitWindowsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textViewPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPeso"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtPeso"
            android:layout_height="wrap_content"
            android:layout_width="140dp"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:ems="10" />

        <TextView
            android:id="@+id/textViewPesoHelper"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="@string/lblUnidPeso"/>

    </android.support.v7.widget.FitWindowsLinearLayout>

    <android.support.v7.widget.FitWindowsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textViewAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAltura"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtAltura"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:ems="10" />

        <TextView
            android:id="@+id/textViewAlturaHelper"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="@string/lblUnidAltura"/>

    </android.support.v7.widget.FitWindowsLinearLayout>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gravar" />
</LinearLayout>
